<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forecastDay"
            type="com.cjrodriguez.weatherforecast.model.Forecastday" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            app:tomorrowDateTime="@{forecastDay.date_epoch}"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="19th July" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:text="@{forecastDay.day.condition.text}"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_time"
            tools:text="Showers" />

        <TextView
            android:id="@+id/day_temp"
            android:layout_width="wrap_content"
            app:temp="@{forecastDay.day.maxtemp_c}"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="19" />

        <TextView
            android:id="@+id/night_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            app:temp="@{forecastDay.day.mintemp_c}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_time"
            tools:text="12" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/weather_icon"
            android:scaleType="centerCrop"
            tools:src="@drawable/_182"
            app:image="@{forecastDay.day.condition.icon}"
            app:layout_constraintBottom_toBottomOf="@+id/condition"
            app:layout_constraintEnd_toStartOf="@id/night_temp"
            app:layout_constraintTop_toTopOf="@+id/date_time" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/condition"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:kmh="@{forecastDay.day.maxwind_kph}"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/condition"
            tools:text="18/h" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:percentage="@{forecastDay.day.avghumidity}"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind"
            tools:text="82%" />

        <TextView
            android:id="@+id/chance_of_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity"
            android:text="@string/chance_of_rain" />

        <TextView
            android:id="@+id/chance_of_rain_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:percentage="@{forecastDay.day.daily_chance_of_rain}"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity"
            tools:text="70%" />

        <TextView
            android:id="@+id/sunSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chance_of_rain"
            android:text="@string/sunrise_sunset" />

        <TextView
            android:id="@+id/sunSet_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:sunrise="@{forecastDay.astro.sunrise}"
            app:sunset="@{forecastDay.astro.sunset}"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chance_of_rain"
            tools:text="05:44" />

        <HorizontalScrollView
            android:id="@+id/chart_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:fillViewport="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunSet">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                app:lineChart="@{forecastDay}"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>