<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="currentWeather"
            type="com.cjrodriguez.weatherforecast.model.WeatherData" />

        <variable
            name="currentDay"
            type="com.cjrodriguez.weatherforecast.model.Day" />

        <variable
            name="isCurrentLocationSelected"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.TodayWeatherFragment">

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            app:currentDateTime="@{currentWeather.current.last_updated_epoch}"
            app:isLocationSelected="@{isCurrentLocationSelected}"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="19th July" />

        <TextView
            android:id="@+id/day_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textStart"
            app:forecastDay="@{currentDay}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_time"
            tools:text="Day 18- Night" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="viewStart"
            app:double="@{currentWeather.current.temp_c}"
            android:textSize="60sp"
            tools:text="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_night" />

        <TextView
            android:id="@+id/degree_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/o"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/temp"
            app:layout_constraintTop_toBottomOf="@id/day_night" />

        <TextView
            android:id="@+id/temp_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/c"
            android:textAlignment="textStart"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@id/degree_circle"
            app:layout_constraintTop_toBottomOf="@id/day_night" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textStart"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@id/degree_circle"
            app:layout_constraintTop_toBottomOf="@id/day_night" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/weather_icon"
            android:scaleType="centerCrop"
            app:image="@{currentWeather.current.condition.icon}"

            app:layout_constraintEnd_toEndOf="@+id/weather_desc"
            app:layout_constraintStart_toStartOf="@+id/weather_desc"
            app:layout_constraintTop_toBottomOf="@id/day_night" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp"
            android:text="@string/feels_like" />

        <TextView
            android:id="@+id/feels_like_cel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:textAlignment="textStart"
            app:double="@{currentWeather.current.feelslike_c}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/feels_like"
            app:layout_constraintTop_toBottomOf="@id/temp"
            tools:text="12" />

        <TextView
            android:id="@+id/weather_desc"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            android:text="@{currentWeather.current.condition.text}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/feels_like"
            app:layout_constraintTop_toTopOf="@+id/feels_like"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Partly Cloudy" />

        <HorizontalScrollView
            android:id="@+id/chart_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:fillViewport="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chance_linear">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/chance_linear"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/transparent_black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:layout_height="30dp"
                android:src="@drawable/umbrella"
                app:tint="@drawable/custom_color"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/chance_rain"
                app:chance="@{currentDay.daily_chance_of_rain}"
                android:layout_width="wrap_content"
                tools:text="chance of rain"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                tools:ignore="PrivateResource" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>